--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
 
 .login, .signup {
   text-decoration: none;
-  color: white;
+  color: black;
   padding: 10px 20px;
   border-radius: 5px;
   background-color: #008c45;
